--- a/Audyt innowacyjności/Page10.xaml
+++ b/Audyt innowacyjności/Page10.xaml
@@ -5,13 +5,32 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Audyt_innowacyjności"
       mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="300"
+      d:DesignHeight="450" d:DesignWidth="800"
       Title="Page10">
 
     <Grid>
         <Button Content="Dalej" HorizontalAlignment="Left" Margin="653,408,0,0" VerticalAlignment="Top" Width="75" Click="Next"/>
         <Button Content="Confij" HorizontalAlignment="Left" Margin="573,408,0,0" VerticalAlignment="Top" Width="75" Click="Back"/>
         <Label Content="Strona 9/14" HorizontalAlignment="Left" Margin="328,10,0,0" VerticalAlignment="Top"/>
+
+        <Label Content="Przeprowadzone w ostatnich 3 latach działania innowacyjne w firmie miały głównie na celu:" HorizontalAlignment="Left" Margin="91,130,0,0" VerticalAlignment="Top" />
+        <Label Content="Poszerzenie oferty" HorizontalAlignment="Left" Margin="368,159,0,0" VerticalAlignment="Top"/>
+        <Label Content="Ułatwienie działań produkcyjnych" HorizontalAlignment="Left" Margin="286,187,0,0" VerticalAlignment="Top"/>
+        <Label Content="Poprawa jakości usług" HorizontalAlignment="Left" Margin="347,215,0,0" VerticalAlignment="Top"/>
+        <Label Content="Wzrost prestiżu firmy jako przedsiębiorstwa innowacyjnego" Margin="150,246,327,0" VerticalAlignment="Top" />
+        <Label Content="Nawiązanie nowych kontaktów z potencjalnymi klientami, innymi przedsiębiorstwami" HorizontalAlignment="Left" Margin="14,277,0,0" VerticalAlignment="Top"/>
+        <Label Content="Zmniejszenie kosztów prowadzonej działalności" Margin="211,307,327,0" VerticalAlignment="Top" />
+        <Label Content="Odpowiedzenie na potrzeby zgłaszane przez klientów" Margin="179,336,327,0" VerticalAlignment="Top" RenderTransformOrigin="5.755,-3.204" />
+
+        <CheckBox Content="" HorizontalAlignment="Left" Margin="474,165,0,0" VerticalAlignment="Top" Width="100" Checked="PoszerzenieOferty" IsChecked="False"/>
+        <CheckBox Content="" HorizontalAlignment="Left" Margin="474,193,0,0" VerticalAlignment="Top" Width="100" Checked="UlatwienieDzialanProdukcyjnych" IsChecked="False"/>
+        <CheckBox Content="" HorizontalAlignment="Left" Margin="474,221,0,0" VerticalAlignment="Top" Width="100" Checked="PoprawaJakosciUslug" IsChecked="False"/>
+        <CheckBox Content="" HorizontalAlignment="Left" Margin="474,252,0,0" VerticalAlignment="Top" Width="100" Checked="WzrostPrestizu" IsChecked="False"/>
+        <CheckBox Content="" HorizontalAlignment="Left" Margin="474,283,0,0" VerticalAlignment="Top" Width="100" Checked="NoweKontakty" IsChecked="False"/>
+        <CheckBox Content="" HorizontalAlignment="Left" Margin="474,313,0,0" VerticalAlignment="Top" Width="100" Checked="ZmniejszenieKosztow" IsChecked="False"/>
+        <CheckBox Content="" HorizontalAlignment="Left" Margin="474,338,0,0" VerticalAlignment="Top" Width="20" Checked="OdpowiedziDoKlientow" IsChecked="False" Height="22"/>
+
+        <Label Content="Źródła innowacji i cele innowacji w firmie" HorizontalAlignment="Left" Margin="242,36,0,0" VerticalAlignment="Top" Width="238"/>
 
     </Grid>
 </Page>
