--- a/Audyt innowacyjności/Page3.xaml
+++ b/Audyt innowacyjności/Page3.xaml
@@ -13,23 +13,17 @@
         <Button Content="Dalej" HorizontalAlignment="Left" Margin="653,408,0,0" VerticalAlignment="Top" Width="75" Click="Next"/>
         <Button Content="Confij" HorizontalAlignment="Left" Margin="573,408,0,0" VerticalAlignment="Top" Width="75" Click="Back"/>
         <!--- Pytanie 3 -->
-        <TextBox x:Name="IloscUmowOPrace" Text="{Binding IloscUmowOPrace, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="391,103,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-1.562,-1.653"/>
-        <TextBox x:Name="IloscUmowCywilnoPrawnych" Text="{Binding IloscUmowCywilnoPrawnych, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="391,131,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-1.562,-1.653"/>
-        <TextBox x:Name="IloscPracownikowSezonowych" Text="{Binding IloscPracownikowSezonowych, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="391,159,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-1.562,-1.653"/>
-        <TextBox x:Name="ZmianyWStrukturze" Text="{Binding ZmianyWStrukturze, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="391,212,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-1.562,-1.653"/>
-        <TextBox x:Name="PoziomWyksztalcenia" Text="{Binding PoziomWyksztalcenia, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="391,240,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-1.562,-1.653"/>
-        <Label Content="Umowa o pracę" HorizontalAlignment="Left" Margin="281,103,0,0" VerticalAlignment="Top" />
-        <Label Content="Liczba zatrudnionych pracowników:" HorizontalAlignment="Left" Margin="178,77,0,0" VerticalAlignment="Top" />
-        <Label Content="Umowa cywilno prawna" HorizontalAlignment="Left" Margin="238,131,0,0" VerticalAlignment="Top"/>
-        <Label Content="Pracownicy sezonowi" HorizontalAlignment="Left" Margin="252,159,0,0" VerticalAlignment="Top"/>
-        <Label Content="Zmiany w strukturze i ilości zatrudnionych" HorizontalAlignment="Left" Margin="142,212,0,0" VerticalAlignment="Top"/>
-        <Label Content="Przeciętny poziom wykształcenia pracownikow" HorizontalAlignment="Left" Margin="118,237,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="StazPracy" Text="{Binding StazPracy, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="391,268,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-1.562,-1.653"/>
-        <Label Content="Przeciętny staż pracy" HorizontalAlignment="Left" Margin="254,263,0,0" VerticalAlignment="Top" />
-        <TextBox x:Name="WiekZatrudnienia" Text="{Binding WiekZatrudnienia, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="391,299,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-1.562,-1.653"/>
-        <Label Content="Średni wiek zatrudnionych" HorizontalAlignment="Left" Margin="225,296,0,0" VerticalAlignment="Top" />
+        <TextBox x:Name="IloscUmowOPrace" Text="{Binding IloscUmowOPrace, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="391,184,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-1.562,-1.653"/>
+        <TextBox x:Name="PoziomWyksztalcenia" Text="{Binding PoziomWyksztalcenia, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="391,212,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-1.562,-1.653"/>
+        <Label Content="Liczba zatrudnionych pracowników" HorizontalAlignment="Left" Margin="179,181,0,0" VerticalAlignment="Top" />
+        <Label Content="Przeciętny poziom wykształcenia pracownikow" HorizontalAlignment="Left" Margin="118,212,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="StazPracy" Text="{Binding StazPracy, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="391,240,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-1.562,-1.653"/>
+        <Label Content="Przeciętny staż pracy" HorizontalAlignment="Left" Margin="254,243,0,0" VerticalAlignment="Top" />
+        <TextBox x:Name="WiekZatrudnienia" Text="{Binding WiekZatrudnienia, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="391,268,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-1.562,-1.653"/>
+        <Label Content="Średni wiek zatrudnionych" HorizontalAlignment="Left" Margin="225,274,0,0" VerticalAlignment="Top" />
 
         <Label Content="Strona 2/14" HorizontalAlignment="Left" Margin="328,10,0,0" VerticalAlignment="Top"/>
+        <Label Content="Informacje o pracownikach" HorizontalAlignment="Left" Margin="281,36,0,0" VerticalAlignment="Top" />
 
 
     </Grid>
