--- a/Audyt innowacyjności/Page5.xaml
+++ b/Audyt innowacyjności/Page5.xaml
@@ -4,36 +4,24 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Audyt_innowacyjności"
-      mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="300"
+      mc:Ignorable="d"
+      d:DesignHeight="450" d:DesignWidth="800"
       Title="Page5">
 
-    <Grid Margin="0,0,-308,-42">
+    <Grid>
 
         <Button Content="Dalej" HorizontalAlignment="Left" Margin="653,408,0,0" VerticalAlignment="Top" Width="75" Click="Next"/>
         <Button Content="Confij" HorizontalAlignment="Left" Margin="573,408,0,0" VerticalAlignment="Top" Width="75" Click="Back"/>
 
-        <TextBox x:Name="SzczebleHierarchiPionowej" Text="{Binding SzczebleHierarchiPionowej, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="391,128,-211,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-1.562,-1.653"/>
-        <TextBox x:Name="KoordynacjaPracyKomentarz" Text="{Binding KoordynacjaPracyKomentarz, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="391,184,-211,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-1.562,-1.653"/>
-        <RadioButton GroupName="KoordynacjaPracy" Content="TAK" IsChecked="True" Margin="398,162,-152,121" Checked="KoordynacjaPracyTAK"/>
-        <RadioButton GroupName="KoordynacjaPracy" Content="NIE" Margin="457,162,-211,121" Checked="KoordynacjaPracyNIE"/>
+        <TextBox x:Name="ZasiegDzialanosci" Text="{Binding ZasiegDzialanosci, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="391,156,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-1.562,-1.653"/>
+        <Label Content="Zasięg działalności" HorizontalAlignment="Left" Margin="268,159,0,0" VerticalAlignment="Top" />
 
-        <RadioButton GroupName="PracaZespolowa" Content="TAK" IsChecked="True" Margin="398,218,-152,65" Checked="PracaZespolowaTAK"/>
-        <RadioButton GroupName="PracaZespolowa" Content="NIE" Margin="457,218,-211,65" Checked="PracaZespolowaNIE"/>
 
-        
-        <RadioButton GroupName="WsparcieInnowacji" Content="TAK" IsChecked="True" Margin="398,274,-152,9" Checked="WsparcieInnowacjiTAK"/>
-        <RadioButton GroupName="WsparcieInnowacji" Content="NIE" Margin="457,274,-211,9" Checked="WsparcieInnowacjiNIE"/>
-        <TextBox x:Name="Innowacyjnosc" Text="{Binding Innowacyjnosc, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="398,296,-218,-19" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-1.562,-1.653"/>
-
-        <Label Content="Dodatkowe dane, ile szczebli liczy hierarchia pionowa?" HorizontalAlignment="Left" Margin="79,128,-75,0" VerticalAlignment="Top" Width="296" />
-        <Label Content="Czy istnieją i jakie są mechanizmy zapewniające koordynację pracy?" HorizontalAlignment="Left" Margin="10,156,-75,0" VerticalAlignment="Top" Width="365"/>
-        <Label Content="Czy promowana jest praca zespołowa?" HorizontalAlignment="Left" Margin="161,212,-75,0" VerticalAlignment="Top" Width="214"/>
-        <Label Content="Czy działa system komunikacji wewnętrznej? " HorizontalAlignment="Left" Margin="130,240,-74,0" VerticalAlignment="Top" Width="244"/>
-        <Label Content="Czy kierownictwo najwyższego szczebla wspiera innowacje?" HorizontalAlignment="Left" Margin="51,268,-75,0" VerticalAlignment="Top" Width="324" />
-        <Label Content=" Na ile innowacyjność stała się sposobem 'życia' w firmie?[1-5] " HorizontalAlignment="Left" Margin="36,294,-75,-18" VerticalAlignment="Top" Width="339" />
+        <TextBox x:Name="SzczebleHierarchiPionowej" Text="{Binding SzczebleHierarchiPionowej, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="391,128,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-1.562,-1.653"/>
+        <Label Content="Ile szczebli liczy hierarchia pionowa?" HorizontalAlignment="Left" Margin="173,128,0,0" VerticalAlignment="Top" Width="204" />
 
         <Label Content="Strona 4/14" HorizontalAlignment="Left" Margin="328,10,0,0" VerticalAlignment="Top"/>
+        <Label Content="Dodatkowe dane o przedsiębiorstwie" HorizontalAlignment="Left" Margin="268,36,0,0" VerticalAlignment="Top" Width="222"/>
 
 
     </Grid>
