--- a/Audyt innowacyjności/Page9.xaml
+++ b/Audyt innowacyjności/Page9.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Audyt_innowacyjności"
       mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="300"
+      d:DesignHeight="450" d:DesignWidth="800"
       Title="Page9">
 
     <Grid>
@@ -26,9 +26,10 @@
         <CheckBox Content="" HorizontalAlignment="Left" Margin="380,249,-180,0" VerticalAlignment="Top" Width="100" Checked="FirmyDoradcze" IsChecked="False"/>
         <CheckBox Content="" HorizontalAlignment="Left" Margin="380,280,-180,0" VerticalAlignment="Top" Width="100" Checked="Uczelnie" IsChecked="False"/>
         <CheckBox Content="" HorizontalAlignment="Left" Margin="380,310,-180,-25" VerticalAlignment="Top" Width="100" Checked="Placowki" IsChecked="False"/>
-        <CheckBox Content="" HorizontalAlignment="Left" Margin="380,339,-180,-54" VerticalAlignment="Top" Width="100" Checked="Inne" IsChecked="False"/>
-        <TextBox x:Name="InneKomentarz" Text="{Binding InneKomentarz, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="341,362,-161,-85" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-1.562,-1.653"/>
+        <CheckBox Content="" HorizontalAlignment="Left" Margin="380,335,0,0" VerticalAlignment="Top" Width="20" Checked="Inne" IsChecked="False" Height="22"/>
+        <TextBox x:Name="InneKomentarz" Text="{Binding InneKomentarz, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="405,335,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-1.562,-1.653"/>
         <Label Content="Strona 8/14" HorizontalAlignment="Left" Margin="328,10,0,0" VerticalAlignment="Top"/>
+        <Label Content="Źródła innowacji i cele innowacji w firmie" HorizontalAlignment="Left" Margin="242,36,0,0" VerticalAlignment="Top" Width="238"/>
 
     </Grid>
 </Page>
