--- a/Audyt innowacyjności/Page15.xaml
+++ b/Audyt innowacyjności/Page15.xaml
@@ -8,10 +8,11 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Page15">
 
-    <Grid>
-        <Button Content="Zakończ" HorizontalAlignment="Left" Margin="653,408,0,0" VerticalAlignment="Top" Width="75" Click="Next"/>
-        <Button Content="Confij" HorizontalAlignment="Left" Margin="573,408,0,0" VerticalAlignment="Top" Width="75" Click="Back"/>
-        <Label Content="Strona 14/14" HorizontalAlignment="Left" Margin="328,10,0,0" VerticalAlignment="Top"/>
+	<Grid>
+		<Button Content="Zakończ" HorizontalAlignment="Left" Margin="653,408,0,0" VerticalAlignment="Top" Width="75" Click="Next"/>
+		<Button Content="Confij" HorizontalAlignment="Left" Margin="573,408,0,0" VerticalAlignment="Top" Width="75" Click="Back"/>
+		<Label Content="Strona 14/14" HorizontalAlignment="Left" Margin="328,10,0,0" VerticalAlignment="Top"/>
+		<TextBlock  Text="{Binding ValidationErrorsString}" Foreground="Red" HorizontalAlignment="Center"  TextWrapping="Wrap" VerticalAlignment="Center" Height="147" Width="264"/>
 
-    </Grid>
+	</Grid>
 </Page>
