--- a/Audyt innowacyjności/Page13.xaml
+++ b/Audyt innowacyjności/Page13.xaml
@@ -13,5 +13,30 @@
         <Button Content="Confij" HorizontalAlignment="Left" Margin="573,408,0,0" VerticalAlignment="Top" Width="75" Click="Back"/>
         <Label Content="Strona 12/14" HorizontalAlignment="Left" Margin="328,10,0,0" VerticalAlignment="Top"/>
 
+        <Label Content="Kultura przedsiębiorstwa" HorizontalAlignment="Left" Margin="298,41,0,0" VerticalAlignment="Top" Width="142" />
+
+        <Label Content="Czy przedsiębiorstwo należy do koła branżowego lub organizacji skupiającej rozwojowe firmy" HorizontalAlignment="Left" Margin="16,158,0,0" VerticalAlignment="Top" Width="496" Height="27"/>
+        <Label Content="Jeżeli tak, to do jakiego i jakie korzyści ma z tego przedsiębiorstwo" HorizontalAlignment="Left" Margin="80,197,0,0" VerticalAlignment="Top" Width="371" Height="27"/>
+
+        <TextBox x:Name="KoloLubOrganizacjaKomentarz" Text="{Binding KoloLubOrganizacjaKomentarz, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="456,222,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-1.562,-1.653"/>
+        <RadioButton GroupName="KoloLubOrganizacja" Content="TAK" IsChecked="True" Margin="456,200,288,232.6" Checked="KoloLubOrganizacjaTAK"/>
+        <RadioButton GroupName="KoloLubOrganizacja" Content="NIE" Margin="515,200,224,232.6" Checked="KoloLubOrganizacjaNIE"/>
+
+        <Label Content="Czy przedsiębiorstwo posiada certyfikaty jakości itp.? Jeżeli tak, to jakie" HorizontalAlignment="Left" Margin="56,253,0,0" VerticalAlignment="Top" Width="384" Height="26"/>
+        <RadioButton GroupName="CertyfikatJakosci" Content="TAK" IsChecked="True" Margin="456,256,290,171.6" Checked="CertyfikatJakosciTAK"/>
+        <RadioButton GroupName="CertyfikatJakosci" Content="NIE" Margin="515,256,224,171.6" Checked="CertyfikatJakosciNIE"/>
+        <TextBox x:Name="CertyfikatJakosciKomentarz" Text="{Binding CertyfikatJakosciKomentarz, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="456,284,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-1.562,-1.653"/>
+
+        <Label Content="Czy przedsiębiorstwo przeprowadza badania dotyczące pomiaru jakości świadczonych usług?&#xD;&#xA;Jeżeli tak to jakie narzędzia w tym celu stosuje przedsiębiorstwo?&#xD;&#xA;" HorizontalAlignment="Left" Margin="-56,308,0,0" VerticalAlignment="Top" Width="505" Height="47" />
+        <RadioButton GroupName="PomiarStopniaSwiadczonychUslug" Content="TAK" IsChecked="True" Margin="456,311,292,120.6" Checked="PomiarStopniaSwiadczonychUslugTAK"/>
+        <RadioButton GroupName="PomiarStopniaSwiadczonychUslug" Content="NIE" Margin="513,311,224,120.6" Checked="PomiarStopniaSwiadczonychUslugNIE"/>
+        <TextBox x:Name="PomiarStopniaSwiadczonychUslugKomentarz" Text="{Binding PomiarStopniaSwiadczonychUslug, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="456,335,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-1.562,-1.653"/>
+        
+        <Label Content="Czy przedsiębiorstwo prowadzi lub planuje prowadzić prace badawczo- rozwojowe?&#xD;&#xA; Jeżeli tak to proszę napisać w jakim zakresie" HorizontalAlignment="Left" Margin="0,111,0,0" VerticalAlignment="Top" Width="449" Height="42"/>
+        <TextBox x:Name="PraceBadawczeKomentarz" Text="{Binding KoordynacjaPracyKomentarz, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Left" Height="23" Margin="454,136,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-1.562,-1.653"/>
+        <RadioButton GroupName="PraceBadawcze" Content="TAK" IsChecked="True" Margin="454,114,290,318.6" Checked="PraceBadawczeTAK"/>
+        <RadioButton GroupName="PraceBadawcze" Content="NIE" Margin="513,114,226,318.6" Checked="PraceBadawczeNIE"/>
+        <RadioButton GroupName="PraceBadawcze" Content="PLANUJE" Margin="573,116,152,313.6" Checked="PraceBadawczePLANUJE"/>
+
     </Grid>
 </Page>
